Changes for DateTime::Set

0.11   2003-09-19
- Fixed callback return value on set_time_zone. 
  This caused the start date to be equal to the end date.
  Bug found by Dan Kubb.

0.10   2003-09-02
- DateTime::Span->duration now uses the new subtract_datetime_absolute
method, which means that the duration is always given in seconds.

- supports _huge_ recurrence sets (not infinite) with "virtual" elements.
  these sets have 'undef' count.
  Experimental - mostly untested !
  this adds support for sets like 'all seconds in 2003'

- faster recurrence intersection
- count returns 'undef' for infinite sets.

0.09    2003-08-18
- added DT::Set count() 
- fixed DT::SpanSet duration()
- methods that accepted a DT object, now accept a list of DT objects.
  Suggested by Ben Bennet, I think.
- added _callback_next - "previous-only recurrences"

- optimizes intersection of recurrence with span

- internal 'S::I' recurrence class

- small fix in DT::Set clone()
- DateTime::Set uses DateTime infinity constants; 
  max and min now return DateTime::Infinite::Future/Past objects.

- DateTime::Span uses DateTime infinity constants; 
  max and min now return DateTime::Infinite::Future/Past objects.
  Docs update to explain 'max()' value when a span is built using 'before'.

- added method set_time_zone()
- clone() is documented

0.08     2003-05-30
- recurrence set intersection uses 'current'
- fixed a number of methods in DateTime::Span, including intersection,
intersects, contains, union, and complement, all of which called the
non-existent DateTime::Set->new method.  Dave Rolsky.

0.07     2003-05-23
- some tweaking on intersection, union, and in the recurrence generator.
- more tests

0.06     2003-05-14
- added 'use warnings' in some tests, added DateTime 0.12 prereq.

0.04     2003-05-12
- change "closest" code to avoid duration comparison

0.03     2003-04-27
- fixes in Set.pm as_list, span.
- iterator accepts 'span' parameters.  Ben Bennett